tests/lang/eval-fail-undeclared-arg.err.exp
error:
       … from call site

         at /pwd/lang/eval-fail-undeclared-arg.nix:1:1:

            1| ({x, z}: x + z) {x = "foo"; y = "bla"; z = "bar";}
             | ^
            2|

       error: function 'anonymous lambda' called with unexpected argument 'y'

       at /pwd/lang/eval-fail-undeclared-arg.nix:1:2:

            1| ({x, z}: x + z) {x = "foo"; y = "bla"; z = "bar";}
             |  ^
            2|
       Did you mean one of x or z?
